feat(gateway): add PATCH method to CORS configuration
- Updated corsWebFilter bean to include PATCH in allowed HTTP methods
- Fixed preflight OPTIONS request failures for user deactivation endpoints